#2438 Improved error reporting due to parsing.
Also, minor regex simplification to matching alternative quotes.